[package]
name = "hyksort"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { git = "https://github.com/skailasa/rsmpi"}
mpi-sys = { path = "mpi-sys", version = "0.2" }
libffi = { version = "1.0.0", optional = true }
